--- a/css/style.css
+++ b/css/style.css
@@ -3,32 +3,35 @@
       background-position: 0 0;
    }
 
-   100% {
-      background-position: -2879px 0;
+   100%{
+     background-position: -2880px 0;
    }
  }
-  @keyframes {
+  @keyframes row2 {
     0% {
-      background-position: 0 -144px;
+      background-position: 0 -72px;
     }
+
   100% {
-    background-position: -2879px -144;
+    background-position: -2880px -72px;
   }
 }
-  @keyframes {
+  @keyframes row3 {
     0% {
-      background-position: 0 -215px;
+      background-position: 0 -144px;
   }
+
+
   100%{
-    background-position: -2879px -215px;
+    background-position: -2880px -144px;
   }
  }
 
 #animation {
-   animation: row1 1s steps(4) none,
-   row2 1s steps(4) 2s none,
-   row3 1s steps(4) 3s none;
-   width: 72px;
+   animation: row1 3s steps(30) none,
+   row2 3s steps(30) 3s none,
+   row3 3s steps(30) 6s none;
+   width: 96px;
    height: 72px;
-   background-image: url('../img/sprite.jpg');
+   background-image: url('../img/sprite.png');
 }
